infra/k8s/spotify-converter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-converter-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spotify-converter
  template:
    metadata:
      labels:
        app: spotify-converter
    spec:
      containers:
        - name: spotify-converter
          image: afrikafunda/spotify-converter:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: sqlite-data
              mountPath: /app/data
      volumes:
        - name: sqlite-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: spotify-converter-srv
spec:
  selector:
    app: spotify-converter
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-converter-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - spotificate.afr1ka.xyz
      secretName: spotify-converter-tls
  rules:
    - host: spotificate.afr1ka.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spotify-converter-srv
                port:
                  number: 5000
